welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:15: error: ';' expected but 'else' found.
    } else{
      ^Diagonal:27: error: illegal start of statement (no modifiers allowed here)
	override def forward(i:Int)  { 
        ^Diagonal:30: error: illegal start of statement (no modifiers allowed here)
	override def forward()  {
        ^Diagonal:33: error: illegal start of statement (no modifiers allowed here)
	override def backward(i:Int) {
        ^Diagonal:36: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^Diagonal:39: error: Missing closing brace `}' assumed here
}
^